# HPL

./: CHANGELOG.md  HPL.cabal  README.md
docs/: Math-Algorithms.html  Utilities-Latex-Pdflatex.html  Utilities-Latex-Templates.html  Utilities-Vizualize.html
docs/HPL/: HPL.haddock  Math-Equation.html  Math-Matrix.html  Math-Vector.html  Primitives-Generator.html  Primitives-VTransform.html  Utilities-Latex-Styles.html  Utilities-Logger.html  doc-index.html  index.html
examples/: EquationSystem.hs  MatrixIO.hs  MatrixLogger.hs  PrimitivesIO.hs  VectorLogger.hs
src/: Math.Matrix.html
src/Math/: Algorithm.hs  Algorithms.hs  Equation.hs  Matrix.hs  Vector.hs
src/Primitives/: Generator.hs  Generators.hs  VTransform.hs
src/Utilities/: Interactive.hs  Logger.hs  Vizualize.hs
src/Utilities/Latex/: Pdflatex.hs  Styles.hs  Templates.hs
test/: TestAll.hs  TestMatrix.hs  TestVector.hs
