cabal-version:      2.4
name:               HPL
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christoffer Lind Andersen
maintainer:         57995582+Chri692u@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Math.Matrix, Math.Vector, Math.Algorithms
                       Utilities.Logger, Utilities.Interactive
                       
  build-depends:       base, mtl, array

executable matrix-logger
    main-is:          MatrixLogger.hs
    build-depends:    base, HPL
    hs-source-dirs:   examples
    default-language: Haskell2010

executable matrixIO
    main-is:          MatrixIO.hs
    build-depends:    base, array, HPL
    hs-source-dirs:   examples
    default-language: Haskell2010

executable equation-system
    main-is:          EquationSystem.hs
    build-depends:    base, array, HPL
    hs-source-dirs:   examples
    default-language: Haskell2010
