cabal-version:      2.4
name:               HPL
version:            0.1.0.0
author:             Christoffer Lind Andersen
maintainer:         57995582+Chri692u@users.noreply.github.com
extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Math.Matrix, Math.Vector, Math.Algorithms, Math.Equation
                       Primitives.Generator, Primitives.VTransform
                       Utilities.Logger, Utilities.Vizualize,
                       Utilities.Latex.Styles, Utilities.Latex.Templates, Utilities.Latex.Pdflatex
                       
  build-depends:       base, mtl, array, random

executable matrix-logger
    main-is:          MatrixLogger.hs
    build-depends:    base, HPL
    hs-source-dirs:   examples
    default-language: Haskell2010

executable vector-logger
    main-is:          VectorLogger.hs
    build-depends:    base, HPL
    hs-source-dirs:   examples
    default-language: Haskell2010

executable primitives-io
    main-is:          PrimitivesIO.hs
    build-depends:    base, HPL
    hs-source-dirs:   examples
    default-language: Haskell2010

executable equation-system
    main-is:          EquationSystem.hs
    build-depends:    base, HPL
    hs-source-dirs:   examples
    default-language: Haskell2010
